9/testfest/make.txt
cargo build --release --bin server --bin client
 Downloading crates ...
  Downloaded tokio-macros v1.8.0
  Downloaded textwrap v0.16.0
  Downloaded socket2 v0.4.7
  Downloaded clap v3.2.23
  Downloaded tokio v1.21.2
   Compiling proc-macro2 v1.0.47
   Compiling unicode-ident v1.0.5
   Compiling quote v1.0.21
   Compiling syn v1.0.103
   Compiling libc v0.2.137
   Compiling pkg-config v0.3.26
   Compiling autocfg v1.1.0
   Compiling cfg-if v1.0.0
   Compiling serde_derive v1.0.147
   Compiling serde v1.0.147
   Compiling heck v0.4.0
   Compiling smallvec v1.10.0
   Compiling version-compare v0.1.0
   Compiling version_check v0.9.4
   Compiling bitflags v1.3.2
   Compiling log v0.4.17
   Compiling scopeguard v1.1.0
   Compiling once_cell v1.16.0
   Compiling xml-rs v0.8.4
   Compiling lazy_static v1.4.0
   Compiling memchr v2.5.0
   Compiling adler v1.0.2
   Compiling cc v1.0.76
   Compiling crc32fast v1.3.2
   Compiling parking_lot_core v0.9.4
   Compiling thiserror v1.0.37
   Compiling crossbeam-utils v0.8.12
   Compiling scoped-tls v1.0.1
   Compiling rayon-core v1.9.3
   Compiling khronos_api v3.1.0
   Compiling downcast-rs v1.2.0
   Compiling ttf-parser v0.17.1
   Compiling ab_glyph_rasterizer v0.1.7
   Compiling minimal-lexical v0.2.1
   Compiling pin-project-lite v0.2.9
   Compiling futures-core v0.3.25
   Compiling nohash-hasher v0.2.0
   Compiling either v1.8.0
   Compiling vec_map v0.8.2
   Compiling tinyvec_macros v0.1.0
   Compiling weezl v0.1.7
   Compiling cty v0.2.2
   Compiling percent-encoding v2.2.0
   Compiling futures-sink v0.3.25
   Compiling arrayref v0.3.6
   Compiling foreign-types-shared v0.3.1
   Compiling lebe v0.5.2
   Compiling arrayvec v0.5.2
   Compiling bit_field v0.10.1
   Compiling color_quant v1.1.0
   Compiling half v2.1.0
   Compiling scoped_threadpool v0.1.9
   Compiling unicode-bidi v0.3.8
   Compiling byteorder v1.4.3
   Compiling serde_json v1.0.87
   Compiling itoa v1.0.4
   Compiling ryu v1.0.11
   Compiling anyhow v1.0.66
   Compiling regex-syntax v0.6.28
   Compiling os_str_bytes v6.3.1
   Compiling unicode-segmentation v1.10.0
   Compiling termcolor v1.1.3
   Compiling strsim v0.10.0
   Compiling ppv-lite86 v0.2.17
   Compiling rfd v0.10.0
   Compiling glow v0.11.2
   Compiling libloading v0.7.4
   Compiling instant v0.1.12
   Compiling memoffset v0.6.5
   Compiling lock_api v0.4.9
   Compiling crossbeam-epoch v0.9.11
   Compiling num-traits v0.2.15
   Compiling rayon v1.5.3
   Compiling num-integer v0.1.45
   Compiling num-rational v0.4.1
   Compiling tokio v1.21.2
   Compiling cfg-expr v0.11.0
   Compiling wayland-sys v0.29.5
   Compiling servo-fontconfig-sys v5.1.0
   Compiling smithay-client-toolkit v0.16.0
   Compiling crossfont v0.5.1
   Compiling x11-dl v2.20.0
   Compiling tracing-core v0.1.30
   Compiling ahash v0.8.1
   Compiling slotmap v1.0.6
   Compiling proc-macro-error-attr v1.0.4
   Compiling proc-macro-error v1.0.4
   Compiling miniz_oxide v0.5.4
   Compiling miniz_oxide v0.6.2
   Compiling cmake v0.1.49
   Compiling tinyvec v1.6.0
   Compiling itertools v0.10.5
   Compiling raw-window-handle v0.5.0
   Compiling raw-window-handle v0.4.3
   Compiling form_urlencoded v1.1.0
   Compiling gif v0.11.4
   Compiling owned_ttf_parser v0.17.0
   Compiling clap_lex v0.3.0
   Compiling convert_case v0.6.0
   Compiling dlib v0.5.0
   Compiling tracing v0.1.37
   Compiling freetype-sys v0.13.1
   Compiling expat-sys v2.1.6
   Compiling unicode-normalization v0.1.22
   Compiling ab_glyph v0.2.18
   Compiling getrandom v0.2.8
   Compiling num_cpus v1.14.0
   Compiling memmap2 v0.5.8
   Compiling gethostname v0.2.3
   Compiling shared_library v0.1.9
   Compiling atty v0.2.14
   Compiling socket2 v0.4.7
   Compiling mio v0.8.5
   Compiling flate2 v1.0.24
   Compiling crossbeam-channel v0.5.6
   Compiling nom v7.1.1
   Compiling aho-corasick v0.7.19
   Compiling gl_generator v0.14.0
   Compiling wayland-scanner v0.29.5
   Compiling include_dir_macros v0.7.3
   Compiling idna v0.3.0
   Compiling nix v0.24.2
   Compiling nix v0.22.3
   Compiling spin v0.9.4
   Compiling nanorand v0.7.0
   Compiling rand_core v0.6.4
   Compiling parking_lot v0.12.1
   Compiling threadpool v1.8.1
   Compiling osmesa-sys v0.1.2
   Compiling png v0.17.7
   Compiling regex v1.7.0
   Compiling xcursor v0.3.4
   Compiling glutin_glx_sys v0.1.8
   Compiling glutin_egl_sys v0.1.6
   Compiling wayland-client v0.29.5
   Compiling wayland-protocols v0.29.5
   Compiling url v2.3.1
   Compiling include_dir v0.7.3
   Compiling crossbeam-deque v0.8.2
   Compiling wayland-commons v0.29.5
   Compiling rand_chacha v0.3.1
   Compiling x11rb v0.9.0
   Compiling bytemuck_derive v1.3.0
   Compiling thiserror-impl v1.0.37
   Compiling pin-project-internal v1.0.12
   Compiling foreign-types-macros v0.2.2
   Compiling aliri_braid_impl v0.2.4
   Compiling tokio-macros v1.8.0
   Compiling freetype-rs v0.26.0
   Compiling clap_derive v4.0.21
   Compiling webbrowser v0.7.1
   Compiling rand v0.8.5
   Compiling bytemuck v1.12.3
   Compiling foreign-types v0.5.0
   Compiling pin-project v1.0.12
   Compiling aliri_braid v0.2.4
   Compiling servo-fontconfig v0.5.1
   Compiling clap v4.0.23
   Compiling emath v0.19.0
   Compiling safe_arch v0.5.2
   Compiling tiny-skia-path v0.7.0
   Compiling calloop v0.10.2
   Compiling arboard v2.1.1
   Compiling flume v0.10.14
   Compiling wayland-cursor v0.29.5
   Compiling wayland-egl v0.29.5
   Compiling unordered-pair v0.2.4
   Compiling hex v0.4.3
   Compiling toml v0.5.9
   Compiling jpeg-decoder v0.2.6
   Compiling epaint v0.19.0
   Compiling tiny-skia v0.7.0
   Compiling exr v1.5.2
   Compiling system-deps v6.0.3
   Compiling tiff v0.7.4
   Compiling egui v0.19.0
   Compiling glib-sys v0.15.10
   Compiling gobject-sys v0.15.10
   Compiling gio-sys v0.15.10
   Compiling atk-sys v0.15.1
   Compiling gdk-sys v0.15.1
   Compiling cairo-sys-rs v0.15.1
   Compiling gdk-pixbuf-sys v0.15.10
   Compiling pango-sys v0.15.10
   Compiling gtk-sys v0.15.3
   Compiling sctk-adwaita v0.4.3
   Compiling smithay-clipboard v0.6.6
   Compiling image v0.24.4
   Compiling egui_glow v0.19.0
   Compiling winit v0.27.5
   Compiling egui_extras v0.19.0
   Compiling common v0.1.0 (/course/cs4500f22/ta/github2/tankalav-lsoto/Maze/Common)
   Compiling glutin v0.29.1
   Compiling egui-winit v0.19.0
   Compiling players v0.1.0 (/course/cs4500f22/ta/github2/tankalav-lsoto/Maze/Players)
   Compiling eframe v0.19.0
   Compiling remote v0.1.0 (/course/cs4500f22/ta/github2/tankalav-lsoto/Maze/Remote)
   Compiling referee v0.1.0 (/course/cs4500f22/ta/github2/tankalav-lsoto/Maze/Referee)
   Compiling Client v0.1.0 (/course/cs4500f22/ta/github2/tankalav-lsoto/Maze/Client)
   Compiling Server v0.1.0 (/course/cs4500f22/ta/github2/tankalav-lsoto/Maze/Server)
error[E0658]: use of unstable library feature 'scoped_threads'
  --> Maze/Client/client.rs:27:5
   |
27 |     thread::scope(|s| {
   |     ^^^^^^^^^^^^^
   |
   = note: see issue #93203 <https://github.com/rust-lang/rust/issues/93203> for more information

error[E0658]: use of unstable library feature 'scoped_threads'
  --> Maze/Client/client.rs:29:15
   |
29 |             s.spawn(|| {
   |               ^^^^^
   |
   = note: see issue #93203 <https://github.com/rust-lang/rust/issues/93203> for more information

For more information about this error, try `rustc --explain E0658`.
error: could not compile `Client` due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
make: *** [build] Error 101
